--- a/CSS/Estilos.css
+++ b/CSS/Estilos.css
@@ -48,3 +48,15 @@ body{
 	background-image: url("Imagens/bomba.gif");
 	position: absolute;
 }
+
+.explosaoChao{
+	width: 55px;
+	height: 49px;
+	position: absolute;
+}
+
+.explosaoAr{
+	width: 70px;
+	height: 70px;
+	position: absolute;
+}
