--- a/CSS/Estilos.css
+++ b/CSS/Estilos.css
@@ -15,7 +15,7 @@ body{
 	position: absolute;
 	margin-left: -25%;
 	top: 50px;
-	left: 50px;
+	left: 50%;
 	width: 720px;
 	height: 621px;
 	display: none;
